--- a/MobileSafe/bin/AndroidManifest.xml
+++ b/MobileSafe/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar" >
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
         <activity
             android:name=".activity.SplashActivity_"
             android:label="@string/app_name" >
