--- a/MobileSafe/AndroidManifest.xml
+++ b/MobileSafe/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".activity.HomeActivity_"
             android:label="@string/app_name">
         </activity>
+        <activity 
+            android:name=".activity.SettingActivity_"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
