完成自定义控件SettingItemView,完成点击查找手机时弹出对话框输入密码
将密码通过md5加密,设置md5工具,完善SettingItemView自定义,依据用户是否勾选来确定控件内容

--- a/MobileSafe/AndroidManifest.xml
+++ b/MobileSafe/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/home_icon"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
         <activity
@@ -31,6 +31,10 @@
         </activity>
         <activity 
             android:name=".activity.SettingActivity_"
+            android:label="@string/app_name">
+        </activity>
+         <activity 
+            android:name=".activity.LostFindActivity_"
             android:label="@string/app_name">
         </activity>
     </application>
