完成向导页面的开发
完成向导页面的开发,向导页再切换时带有动画效果

--- a/MobileSafe/.apt_generated/com/phy/mobilesafe/activity/.gitignore
+++ b/MobileSafe/.apt_generated/com/phy/mobilesafe/activity/.gitignore
@@ -2,3 +2,7 @@
 /SplashActivity_.java
 /SettingActivity_.java
 /LostFindActivity_.java
+/Setup1Activity_.java
+/Setup2Activity_.java
+/Setup3Activity_.java
+/Setup4Activity_.java
