--- a/MobileSafe/bin/AndroidManifest.xml
+++ b/MobileSafe/bin/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- 监听系统启动权限 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -28,7 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity 
+            android:name=".activity.ContactActivity_"
+            android:label="@string/app_name">
+        </activity>
         <activity 
             android:name=".activity.HomeActivity_"
             android:label="@string/app_name">
