--- a/MobileSafe/bin/AndroidManifest.xml
+++ b/MobileSafe/bin/AndroidManifest.xml
@@ -13,7 +13,18 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- 监听系统启动权限 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <!-- 监听通讯录数据库的权限 -->
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <!-- 发送短信的权限 -->
+       <uses-permission android:name="android.permission.SEND_SMS"/>
+    <!-- 监听短信的权限 -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <!-- 获取位置服务的权限 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+ 
+    
 
     <application
         android:allowBackup="true"
@@ -21,7 +32,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
         <activity
-            android:name=".activity.SplashActivity_"
+            android:name="com.phy.mobilesafe.activity.SplashActivity_"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,42 +41,50 @@
             </intent-filter>
         </activity>
         <activity 
-            android:name=".activity.ContactActivity_"
+            android:name="com.phy.mobilesafe.activity.ContactActivity_"
             android:label="@string/app_name">
         </activity>
         <activity 
-            android:name=".activity.HomeActivity_"
+            android:name="com.phy.mobilesafe.activity.HomeActivity_"
             android:label="@string/app_name">
         </activity>
         <activity 
-            android:name=".activity.SettingActivity_"
+            android:name="com.phy.mobilesafe.activity.SettingActivity_"
             android:label="@string/app_name">
         </activity>
          <activity 
-            android:name=".activity.LostFindActivity_"
+            android:name="com.phy.mobilesafe.activity.LostFindActivity_"
             android:label="@string/app_name">
         </activity>
         <activity 
-            android:name=".activity.Setup1Activity_"
+            android:name="com.phy.mobilesafe.activity.Setup1Activity_"
             android:label="@string/app_name">
         </activity>
         <activity 
-            android:name=".activity.Setup2Activity_"
+            android:name="com.phy.mobilesafe.activity.Setup2Activity_"
             android:label="@string/app_name">
         </activity>
         <activity 
-            android:name=".activity.Setup3Activity_"
+            android:name="com.phy.mobilesafe.activity.Setup3Activity_"
             android:label="@string/app_name">
         </activity>
         <activity 
-            android:name=".activity.Setup4Activity_"
+            android:name="com.phy.mobilesafe.activity.Setup4Activity_"
             android:label="@string/app_name">
         </activity>
-        <receiver android:name=".receiver.BootCompleteReceiver" >
+        <receiver android:name=".receiver.BootCompleteReceiver_" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <!-- <intent-filter android:priority=""> 接收器优先级 -->
+        <receiver android:name=".receiver.SmsReceiver_" >
+            <intent-filter android:priority="2147483647">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+        <service 
+            android:name="com.phy.mobilesafe.service.LocationService_"></service>
     </application>
 
 </manifest>
